codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_error_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Failed to load plugin details.


     Plugin detail unavailable  Failed to load plugin details.
› 1. Back to plugins            Return to the plugin list

  esc close
