codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_admin_disabled_installed.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 1 available plugins.

   All Plugins   Installed (1)   OpenAI Curated   Workspace   Add Marketplace

  Type to search plugins

› [!] Admin Blocked  Disabled   Press Enter to view plugin details








  ←/→ tabs · enter details · space toggle · esc close
