codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_curated_marketplace.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 4 available plugins.

   All Plugins   Installed (1)   OpenAI Curated   Workspace   Repo Marketplace   Add Marketplace

  Type to search plugins

› [ ] Alpha Sync          Disabled         Tab to enable; Enter view details
  [-] Bravo Search        Available      · OpenAI Curated · Search docs and tickets.
  [-] Hidden Repo Plugin  Available      · Repo Marketplace · Should not be shown in /plugins.
  [-] Starter             Admin assigned · OpenAI Curated · Included by default.





  ←/→ tabs · enter details · tab toggle · esc close
