codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_custom_tab_binding_hides_toggle_hint.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 1 of 1 available plugins.

   All Plugins   Installed (1)   OpenAI Curated   Workspace   Add Marketplace

  Type to search plugins

› [*] Drive      Installed   Press Enter to view plugin details








  ←/→ tabs · enter details · esc close
